k8s/micro-k8s/web/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - secretName: demo-tls
  rules:
  - host: demo.k8s.zean.pro
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: web
          servicePort: 80
